VTN-26770: rename create-file label

--- a/node/create-file.html
+++ b/node/create-file.html
@@ -75,7 +75,7 @@
         outputs: 2,
         outputLabels: ["result", "error"],
         icon: "veritone-logo-transparent.png",
-        paletteLabel: "create-file",
+        paletteLabel: "create file",
         align: "right",
         label: function () {
             return this.name || this.tdoName || "create file";
