update aiware merging

--- a/node/aiware-merging.html
+++ b/node/aiware-merging.html
@@ -55,7 +55,7 @@
             outputs: 2,
             outputLabels: ["result", "error"],
             icon: "veritone-logo-transparent.png",
-            paletteLabel: "aiware-merging",
+            paletteLabel: "aiware merging",
             label: function () {
                 return this.name || "aiware merging";
             },
