VTN-28447 [Automate] aiWARE Objects node Read and Update on Library object

--- a/node/aiware-objects.html
+++ b/node/aiware-objects.html
@@ -9,6 +9,7 @@
             <option value="watchlist">Watchlist</option>
             <option value="collection">Collection</option>
             <option value="folder">Folder</option>
+            <option value="library">Library</option>
         </select>
     </div>
     <div class="form-row">
