VTN-28452: update the `ai processing` node fields

--- a/node/engine.html
+++ b/node/engine.html
@@ -1,6 +1,6 @@
 <script type="text/x-red" data-template-name="ai-processing">
     <div class="form-row" id="input-targetId">
-        <label for="node-input-targetId"><i class="fa fa-hashtag"></i> Target ID</label>
+        <label for="node-input-targetId"><i class="fa fa-hashtag"></i> Media ID</label>
         <input type="text" id="node-input-targetId" placeholder="UUID">
     </div>
     <div id="input-engine-tasks"></div>
@@ -19,7 +19,7 @@
 <h3>Inputs</h3>
 <dl class="message-properties">
     <dt>
-        Target ID <span class="property-type">string</span>
+        Media ID <span class="property-type">string</span>
     </dt>
     <dd>
         The ID of the <code>temporalDataObject</code> (aka Media File in aiWARE) intended for processing
