--- a/node/aiware-objects.html
+++ b/node/aiware-objects.html
@@ -14,12 +14,7 @@
     </div>
     <div class="form-row">
         <label for="node-input-action"><i class="icon-tag"></i> Action</label>
-        <select id="node-input-action" style="width:66%">
-            <option value="create">Create</option>
-            <option value="read">Read</option>
-            <option value="update">Update</option>
-            <option value="delete">Delete</option>
-        </select>
+        <select id="node-input-action" style="width:66%"></select>
     </div>
     <input type="hidden" id="node-input-mtime">
     <div id="input-for-crud-data"></div>
@@ -69,6 +64,7 @@
 
 <script type="text/javascript">
     (function () {
+        const actionOptions = ['Create', 'Read', 'Update', 'Delete'];
         const inputTypes = {
             "string": "text",
             "number": "number",
@@ -77,6 +73,25 @@
         };
         const loading = (text) => $(`<div>${text} <i class="fa fa-spinner"></i></div>`);
         const definitions = {};
+        
+        const checkOptions = (object) => {
+          const action =  $('#node-input-action');
+          action.empty();
+          actionOptions.forEach(option => {
+            const key = `${object}.${option.toLowerCase()}`;
+            if (definitions[key]) {
+              action.append("<option value='" + option.toLowerCase() +"'>" + option + "</option>");
+            }else {
+              $.getJSON("/veritone/objects/schemas/" + key, function (data) {
+                if(data) {
+                  definitions[key] = data;
+                  action.append("<option value='" + option.toLowerCase() +"'>" + option + "</option>");
+                }
+              });
+            }
+          });
+        }
+
         const getDefinitions = (key) => new Promise((resolve, reject) => {
             if (!key) {
                 resolve([]);
@@ -208,6 +223,8 @@
             },
             oneditprepare: function () {
                 const { object, action } = this;
+                const objectElement = $("#node-input-object");
+                objectElement.on('change', () => checkOptions(objectElement.val()));
                 this.actionData = this.actionData || {};
                 // set data into node
                 onCrudKeyChange((key) => renderForm(this.actionData, key));
