--- a/node/event.html
+++ b/node/event.html
@@ -32,11 +32,11 @@
         <input type="text" id="node-input-name" placeholder="Name">
     </div>
     <div class="form-row">
-        <label for="node-input-event"><i class="fa fa-tasks"></i> Event</label>
+        <label for="node-input-event"><i class="fa fa-tasks"></i> Event Name</label>
         <input type="text" id="node-input-event_name" placeholder="">
     </div>
     <div class="form-row">
-        <label for="node-input-type"><i class="fa fa-dot-circle-o"></i> Type</label>
+        <label for="node-input-type"><i class="fa fa-dot-circle-o"></i> Event Type</label>
         <input type="text" id="node-input-event_type" placeholder="">
     </div>
     <div class="form-row">
