--- a/node/engine-in.html
+++ b/node/engine-in.html
@@ -1,28 +1,32 @@
 <script type="text/javascript">
-    RED.nodes.registerType('engine-in',{
-      category: 'aiWARE',
-      color:"#b3e5fc",
-      defaults: {
-        name: {value:""},
-      },
-      inputs:0,
-      outputs:1,
-      icon: "veritone-logo-transparent.png",
-      paletteLabel: "engine in",
-      label: function() {
-        return this.name || "engine in";
-      }
+    RED.nodes.registerType('engine-in', {
+        category: 'aiWARE',
+        color: "#b3e5fc",
+        defaults: {
+            name: { value: "" },
+        },
+        inputs: 0,
+        outputs: 1,
+        icon: "veritone-logo-transparent.png",
+        paletteLabel: "engine in",
+        label: function () {
+            return `${this.name || "engine in"}`;
+        }
     });
-  </script>
-  
-  <script type="text/x-red" data-template-name="engine-in">
+</script>
+
+<script type="text/x-red" data-template-name="engine-in">
       <div class="form-row">
           <label for="node-input-name"><i class="icon-tag"></i> Name</label>
           <input type="text" id="node-input-name" placeholder="Name">
       </div>
+      <div class="form-row">
+        <label for="node-input-uri"><i class="icon-url"></i> URI</label>
+        <input type="text" disabled value="/process" id="node-input-uri" placeholder="URI">
+    </div>
   </script>
-  
-  <script type="text/x-red" data-help-name="engine-in">
+
+<script type="text/x-red" data-help-name="engine-in">
       <p>Sends messages from Veritone's engine framework (aka V2F or realtime) into the flow when running as an Autmation engine. This node is specific to Veritone's runtime and will not interact with the Node-RED runtime within Automate Studio </p>
 <h3>Outputs</h3>
 <ol class="node-ports">
